--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -5,3 +5,7 @@ Add styles or override variables from the theme here.
 */
 $primary: #1f2937;
 $secondary: #f97316;
+
+.td-navbar .navbar-brand__name {
+  display: none;
+}
