Add link in footer

--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -9,3 +9,8 @@ $secondary: #f97316;
 .td-navbar .navbar-brand__name {
   display: none;
 }
+
+.zammad-chat {
+  left: 30px !important;
+  right: 0 !important;
+}
