--- a/layouts/_partials/footer/center.html
+++ b/layouts/_partials/footer/center.html
@@ -1,7 +1,7 @@
 {{ partial "footer/copyright.html"  . -}}
 
 {{ with .Site.Params.privacy_policy -}}
-<p class="td-footer__about mt-2"><a href="{{ . }}">Mentions légales</a></p>
+<p class="td-footer__about mt-2"><a href="{{ . }}">Mentions légales</a> - <a href="https://wallabag.it/fr/cgv">Conditions Générales de Vente</a></p>
 {{- end -}}
 
 <script src="https://wallabag-it.zammad.com/assets/chat/chat-no-jquery.min.js"></script>
