--- a/layouts/_partials/footer/center.html
+++ b/layouts/_partials/footer/center.html
@@ -4,7 +4,7 @@
 <p class="td-footer__about mt-2"><a href="{{ . }}">Mentions légales</a> - <a href="https://wallabag.it/fr/cgv">Conditions Générales de Vente</a></p>
 {{- end -}}
 
-<script src="https://wallabag-it.zammad.com/assets/chat/chat-no-jquery.min.js"></script>
+<script src="https://helpdesk.wallabag.it/assets/chat/chat-no-jquery.min.js"></script>
 <script>
 (function() {
   new ZammadChat({
